style.css
:root {
  --color-0: #D93526;
  --color-1: #398712;
  --color-2: #3C71F7;
  --color-3: #D92662;
  --color-4: #628100;
  --color-5: #B645CD;
  --color-6: #058686;
  --color-7: #7569DA;
  --color-8: #AD6400;
  --color-9: #017FC0;
  --color-10: #D24317;
  --color-11: #00895A;
  --color-12: #D9269D;
  --color-13: #827800;
  --color-14: #9062CA;
  --color-15: #977000;
}

td { background-color: transparent; }
td.key {
  width: 13rem;
}

.color-0 { color: var(--color-0); }
.color-1 { color: var(--color-1); }
.color-2 { color: var(--color-2); }
.color-3 { color: var(--color-3); }
.color-4 { color: var(--color-4); }
.color-5 { color: var(--color-5); }
.color-6 { color: var(--color-6); }
.color-7 { color: var(--color-7); }
.color-8 { color: var(--color-8); }
.color-9 { color: var(--color-9); }
.color-10 { color: var(--color-10); }
.color-11 { color: var(--color-11); }
.color-12 { color: var(--color-12); }
.color-13 { color: var(--color-13); }
.color-14 { color: var(--color-14); }
.color-15 { color: var(--color-15); }

.flex { display: flex; }
.monospace { font-family: monospace; }
.space-between { justify-content: space-between; }

